// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown menu is Array 1`] = `
<Dropdown
  menu={Array []}
>
  <button
    className="kd-dropdown-trigger"
    type="button"
  >
    button
  </button>
</Dropdown>
`;

exports[`Dropdown renders correctly 1`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 2`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="top"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 3`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="left"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 4`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="right"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 5`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="bottom"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 6`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="topLeft"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 7`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="topRight"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 8`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="bottomLeft"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 9`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="bottomRight"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 10`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="leftTop"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 11`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="leftBottom"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 12`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="rightTop"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 13`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  placement="rightBottom"
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 14`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  trigger={
    Array [
      "hover",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 15`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  trigger={
    Array [
      "focus",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 16`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  trigger={
    Array [
      "click",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;

exports[`Dropdown renders correctly 17`] = `
<Dropdown
  menu={
    <ForwardRef>
      <Unknown>
        <a
          href="https://www.kingdee.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单1
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.kdcloud.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单2
        </a>
      </Unknown>
      <Unknown>
        <a
          href="https://www.yunzhijia.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          菜单3
        </a>
      </Unknown>
      <Unknown
        danger={true}
      >
        a danger item
      </Unknown>
    </ForwardRef>
  }
  trigger={
    Array [
      "contextMenu",
    ]
  }
>
  <span
    className="kd-dropdown-trigger"
  />
</Dropdown>
`;
